--- a/EAD/EADSession4/WebContent/registration.html
+++ b/EAD/EADSession4/WebContent/registration.html
@@ -2,69 +2,74 @@
 <html>
 <head>
 </head>
-<body>	
+<body>
 	<table>
 		<tr>
-			<td ><img src="images/metacube_logo.png" width="30%" ></td>
-			<td align="right" width="70%" ><font size = "5">Contact Us</font></td>
+			<td><img src="Images/metacube.jpg" height="20%"></td>
+			<td align="right" width="70%"></td>
 		</tr>
 	</table>
-	<hr/>
+	<hr />
 	<h1 align="center">Employee Details</h1>
-	<form align="center" action = "login.html">
-		<table align="center" cellspacing="10px" frame="box"> 
+	<form align="center" action="RegistrationServlet" method="post">
+		<table align="center" cellspacing="10px" frame="box">
 			<tr>
-				<td  width="100px" align="Left">First Name:</td>
-				<td><input type="text" id="firstname" name="firstname" placeholder="Enter First Name" required  /></td>
+				<td width="100px" align="Left">First Name:</td>
+				<td><input type="text" name="firstName"
+					placeholder="Enter First Name" required />
+				</td>
 			</tr>
 			<tr>
-				<td  width="100px" align="Left">Last Name:</td>
-				<td><input type="text" id="lastname" name="lastname" placeholder="Enter Last Name"  required/></td>
+				<td width="100px" align="Left">Last Name:</td>
+				<td><input type="text" name="lastName"
+					placeholder="Enter Last Name" required />
+				</td>
 			</tr>
 			<tr>
-				<td  width="100px" align="Left">Age:</td>
-				<td><input type="age" id="age" name="age" placeholder="Enter Your Age" required/></td>
+				<td width="100px" align="Left">Date of birth:</td>
+				<td align="Left"><input type="Date" name="dateOfBirth"
+					placeholder="Enter date of birth" required />
+				</td>
 			</tr>
 			<tr>
-				<td  width="100px" align="Left">Date of birth:</td>
-				<td align="Left" ><input type="Date"  name="dateOfBirth" placeholder="Enter date of birth" required/></td>
+				<td width="100px" align="Left">Contact Number:</td>
+				<td align="Left"><input type="Number" name="contact"
+					placeholder="Enter Contact Number" required />
+				</td>
 			</tr>
 			<tr>
-				<td  width="100px" align="Left">Contact Number:</td>
-				<td align="Left" ><input type="Number" id="contactnumber" name="contactnumber" placeholder="Enter Contact Number" required/></td>
+				<td width="100px" align="Left">Email:</td>
+				<td><input type="email" name="email"
+					placeholder="Enter Your Email" required />
+				</td>
 			</tr>
 
-
 			<tr>
-				<td  width="100px" align="Left">Email:</td>
-				<td><input type="text" id="email" name="email" placeholder="Enter Your Email"  required/></td>
-			</tr>
-			
-			<tr>
-				<td  width="100px" align="Left">Password:</td>
-				<td align="Left" ><input type="Password" name="password" placeholder="Enter Password" required/></td>
+				<td width="100px" align="Left">Password:</td>
+				<td align="Left"><input type="Password" name="password"
+					placeholder="Enter Password" required />
+				</td>
 			</tr>
 			<tr>
 				<td width="100px" align="Left">Company/Institution:</td>
-				<td align = "Left"><select id="Company" name="company">
+				<td align="Left"><select name="organization">
 					<option value="null" disabled selected>Select your option</option>
 					<option value="metacube">Metacube</option>
 					<option value="infosys">Infosys</option>
 					<option value="accenture">Accenture</option>
 					<option value="tcs">TCS</option>
-					<option value="mindtree">Mindtree</option>
+					<option value="mindtree">Appirio</option>
 				</select></td>
 			</tr>
 			<tr>
-				<td colspan="2" width="100px" align="center">
-					<br>
-					<input type="submit" value="Submit"  >
+				<td colspan="2" width="100px" align="center"><br>
+					<input type="submit" value="Submit">
 				</td>
 			</tr>
 		</table>
 	</form>
-	<footer style="margin-top: 5%"> <hr /><p align="center">&copy;Copyright 2018-19 | All Rights Reserved | Metacube
-	Training</p>
-</footer>
+	<hr/>
+	<p align="center">&copy;Copyright 2018-19 | All Rights Reserved |
+	Metacube Training</p>
 </body>
 </html>
